--- a/src/main/resources/org/example/main.fxml
+++ b/src/main/resources/org/example/main.fxml
@@ -1,34 +1,35 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.EmployeeService">
-    <children>
-        <TabPane prefHeight="400.0" prefWidth="600.0" tabClosingPolicy="UNAVAILABLE">
-            <tabs>
-                <Tab text="Untitled Tab 1">
-                    <content>
-                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
-                            <children>
-                                <TextField fx:id="nameField" layoutX="315.0" layoutY="34.0" promptText="Name" />
-                                <TextField fx:id="surnameField" layoutX="317.0" layoutY="79.0" promptText="Surname" />
-                                <Button layoutX="370.0" layoutY="260.0" mnemonicParsing="false" text="Add" />
-                        <ListView layoutX="14.0" layoutY="18.0" prefHeight="336.0" prefWidth="200.0" />
-                            </children>
-                        </AnchorPane>
-                    </content>
-                </Tab>
-                <Tab text="Untitled Tab 2">
-                    <content>
-                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-                    </content>
-                </Tab>
-            </tabs>
-        </TabPane>
-    </children>
-</AnchorPane>
+<TabPane prefHeight="400.0" prefWidth="600.0" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.EmployeeService">
+    <tabs>
+        <Tab text="Employees">
+            <content>
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                    <children>
+                        <TextField fx:id="nameField" layoutX="315.0" layoutY="34.0" promptText="Name" />
+                        <TextField fx:id="surnameField" layoutX="315.0" layoutY="78.0" promptText="Surname" />
+                        <Button layoutX="315.0" layoutY="310.0" mnemonicParsing="false" onAction="#createEmployee" onMouseClicked="#getAllEmployees" text="Add" />
+                        <ListView fx:id="employeeListView" layoutX="14.0" layoutY="18.0" onMouseClicked="#loadEmployeeData" prefHeight="336.0" prefWidth="200.0" />
+                        <CheckBox fx:id="isMonday" layoutX="315.0" layoutY="120.0" mnemonicParsing="false" text="Monday" />
+                        <CheckBox fx:id="isTuesday" layoutX="315.0" layoutY="144.0" mnemonicParsing="false" text="Tuesday" />
+                        <CheckBox fx:id="isWednesday" layoutX="315.0" layoutY="168.0" mnemonicParsing="false" text="Wednesday" />
+                        <CheckBox fx:id="isThursday" layoutX="315.0" layoutY="194.0" mnemonicParsing="false" text="Thursday" />
+                        <CheckBox fx:id="isFriday" layoutX="315.0" layoutY="218.0" mnemonicParsing="false" text="Friday" />
+                        <CheckBox fx:id="isSaturday" layoutX="315.0" layoutY="242.0" mnemonicParsing="false" text="Saturday" />
+                        <CheckBox fx:id="isSunday" layoutX="315.0" layoutY="269.0" mnemonicParsing="false" text="Sunday" />
+                  <Button layoutX="362.0" layoutY="310.0" mnemonicParsing="false" onAction="#updateEmployee" onMouseClicked="#getAllEmployees" text="Update" />
+                  <Button layoutX="429.0" layoutY="310.0" mnemonicParsing="false" onAction="#deleteEmployee" onMouseClicked="#getAllEmployees" text="Delete" />
+                    </children>
+                </AnchorPane>
+            </content>
+        </Tab>
+    </tabs>
+</TabPane>
